Updated changes in states

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
             <div>
                 <div class='description_container'>
                     <p class='description_container_paragraph'>
-                        Talk with other user by passing his personal code or talk with strangers!
-                    </p>
+                        Solve questions with other user by passing his personal code or solve with strangers with similar coding ratings!                    </p>
                 </div>
                 <div class='personal_code_container'>
                     <div class='personal_code_title_container'>
